# azentrix-typedmodel

./: README.md  pyproject.toml
src/TypedModel/: __init__.py  base.py  config.py  exceptions.py  factory.py  registry.py  validators.py
src/TypedModel/nested/: builder.py  composer.py
src/TypedModel/typing/: primitives.py
src/azentrix_typedmodel/: __init__.py  factory.py  registry.py
src/azentrix_typedmodel/nested/: builder.py
src/azentrix_typedmodel/typing/: primitives.py
src/tests/: test_base.py  test_factory.py  test_nested.py
tests/: test_base.py  test_factory.py  test_nested.py
